--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,394 @@
-.App {
+body {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  text-transform: capitalize;
+}
+
+:root {
+  --color-bottom: #ddd;
+  --color-white: #fff;
+  --color-belt: #444;
+  --color-darkBlue: #2d4059;
+  --color-orange: #f07b3f;
+  --color-red: #ea5455;
+  --color-yellow: #ffd460;
+}
+/* =====================================
+  Page Loader styling starts here
+===================================== */
+.ball {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.poke_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.pokeball {
+  border: 2px solid #000;
+  overflow: hidden;
+  position: relative;
+  z-index:1;
+  background: #f03e33; 
+  animation: moveLat 2s ease-in-out infinite alternate-reverse;
+}
+
+.pokeball_ground_shadow {
+  width: 60px;
+  height: 5px;
+  margin-left: 30px;
+  margin-top: -3px;
+  z-index:0;
+  background: rgba(0,0,0,.5);  
+  -webkit-filter: blur(2px);  
+  filter: blur(2px);
+  animation: moveLat 2s ease-in-out infinite alternate-reverse;
+}
+
+.pokeball_part_bottom {
+  width: 60px;
+  height: 26px;
+  position: absolute;
+  bottom: 0; 
+  background: var(--color-bottom);
+  animation: rotateBottom 2s ease-in-out infinite alternate-reverse;
+}
+
+.belt {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 8px; 
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  position: absolute;
+  bottom: calc(50% - 4px);
+  background: var(--color-belt);
+  animation: rotate 2s ease-in-out infinite alternate-reverse;
+}
+
+.belt_loop {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 22px;
+  height: 22px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% - 11px);
+  left: calc(50% - 11px);
+  background: var(--color-belt);
+}
+
+.belt_bg {
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: calc(50% - 2px);
+  background: var(--color-belt);
+  animation: rotate 2s ease-in-out infinite alternate-reverse;
+}
+
+.belt_loop_inside {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 14px;
+  height: 14px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  position: absolute;  
+  top: calc(50% - 7px);
+  left: calc(50% - 7px); 
+  background: var(--color-bottom);
+}
+
+.belt_loop_button {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 6px;
+  height: 6px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% - 3px);
+  left: calc(50% - 3px);
+  background: var(--color-bottom);  
+}
+
+.pokeball_shadow {
+  overflow: hidden;
+  position: absolute;
+  left: -15%;
+  background: rgba(255,255,255,.2); 
+}
+
+.pokeball_light {
+  width: 10px;
+  height: 20px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: absolute;
+  top: 3px;
+  left: 7px;
+  background: rgba(255,255,255,.3);
+  -webkit-transform: skew(-35deg, 2deg) rotate(10deg);
+  -ms-transform: skew(-35deg, 2deg) rotate(10deg);
+  transform: skew(-35deg, 2deg) rotate(10deg);
+}
+
+@-webkit-keyframes moveLat { 
+  0% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  } 
+  30% { 
+    -webkit-transform: translateX(15px); 
+    transform: translateX(15px) 
+  }  
+  50% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  }  
+  70% { 
+    -webkit-transform: translateX(15px); 
+    transform: translateX(15px) 
+  } 
+  100% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  }
+}
+
+@keyframes moveLat { 
+  0% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  } 
+  30% { 
+    -webkit-transform: translateX(15px); 
+    transform: translateX(15px) 
+  }  
+  50% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  }  
+  70% { 
+    -webkit-transform: translateX(15px); 
+    transform: translateX(15px) 
+  } 
+  100% { 
+    -webkit-transform: translateX(0); 
+    transform: translateX(0) 
+  }
+}
+
+@-webkit-keyframes rotate {
+  0% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+  30% { 
+    -webkit-transform: rotate(20deg); 
+    transform: rotate(20deg) 
+  }  
+  50% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }  
+  70% { 
+    -webkit-transform: rotate(20deg); 
+    transform: rotate(20deg) 
+  } 
+  100% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+}
+
+
+@keyframes rotate {
+  0% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+  30% { 
+    -webkit-transform: rotate(20deg); 
+    transform: rotate(20deg) 
+  }  
+  50% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }  
+  70% { 
+    -webkit-transform: rotate(20deg); 
+    transform: rotate(20deg) 
+  } 
+  100% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+}
+
+@-webkit-keyframes rotateBottom {  
+  0% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }
+  30% { 
+    -webkit-transform: rotate(20deg) skew(30deg, 0deg) scale(1.2); 
+    transform: rotate(20deg) skew(30deg, 0deg) scale(1.2) 
+  } 
+  50% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+  70% { 
+    -webkit-transform: rotate(20deg) skew(30deg, 0deg) scale(1.2); 
+    transform: rotate(20deg) skew(30deg, 0deg) scale(1.2) 
+  }  
+  100% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }
+}
+
+@keyframes rotateBottom {  
+  0% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }
+  30% { 
+    -webkit-transform: rotate(20deg) skew(30deg, 0deg) scale(1.2); 
+    transform: rotate(20deg) skew(30deg, 0deg) scale(1.2) 
+  } 
+  50% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  } 
+  70% { 
+    -webkit-transform: rotate(20deg) skew(30deg, 0deg) scale(1.2); 
+    transform: rotate(20deg) skew(30deg, 0deg) scale(1.2) 
+  }  
+  100% { 
+    -webkit-transform: rotate(0); 
+    transform: rotate(0) 
+  }
+}
+/* =====================================
+  Page Loader styling ends here
+===================================== */
+/* =====================================
+  Header styling starts here
+===================================== */
+header, footer {
+  padding: 5px 0;
+  background-color: var( --color-darkBlue);
+  color: var(--color-red);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font: bold 60px sans-serif;
+  letter-spacing: 1px;
+  -webkit-text-stroke: 1px var(--color-yellow);
 }
+/* =====================================
+  Header styling ends here
+===================================== */
+/* =====================================
+  Pokemon List section styling starts here
+===================================== */
+.pokemonList { margin: 20px 0; }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pokemonList ul {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.pokemonList li {
+  padding: 20px;
+  border: 1px solid var(--color-bottom);
+  margin: -1px 0 0 -1px;
+  list-style-type: none;
+  background-color: var( --color-darkBlue);
+  text-align: center;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+h2 {
+  color: var(--color-orange);
+  font-size: 25px;
+}
+
+h3 {
+  color: var(--color-red);
+  font-size: 15px;  
+}
+
+.pokemonList img {
+  width: 90%;
+  margin: 10px;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.pokemonList img:hover { 
+  -webkit-transform: scale(1.1); 
+  -ms-transform: scale(1.1); transform: scale(1.1); 
+}
+/* =====================================
+  Pokemon List section styling ends here
+===================================== */
+/* =====================================
+  Footer styling starts here
+===================================== */
+footer { padding: 20px 0; }
+
+.btn.btn-default:hover { background-color: var(--color-orange); }
+
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn.btn-default {
+  border-radius: 0;
+  margin-right: 10px;
+  background-color: var(--color-yellow);
+  font-weight: bold;
+  text-transform: capitalize;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn.btn-default:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
+/* =====================================
+  Footer styling starts here
+===================================== */
